fixed the experience button size issue on mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,7 +28,6 @@ main {
   height: 100vh;
   overflow-y: hidden;
 }
-
 .section-container {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
@@ -441,7 +440,11 @@ nav img:hover {
   height: 175vh;
   scroll-snap-align: start;
 }
-
+@media screen and (min-width:375px) and (max-width:650px) {
+  .section-three {
+    height: 250vh;
+  }
+}
 .section-three-title {
   width: 100%;
   height: 10vh;
@@ -599,7 +602,7 @@ nav img:hover {
   text-decoration: none;
   background: #f44336;
   color: #fff;
-  padding: 7px 15px;
+  padding: 3% 1.5%;
   border-radius: 5px;
   /* font-size: 17px; */
   font-weight: 400;
@@ -672,8 +675,8 @@ nav img:hover {
 
 /* /////////////////////////////////////////footer//////////////////////////////////////////////////// */
 footer {
-  scroll-snap-align: start;
-  height: 31vh;
+  scroll-snap-align: end;
+  height: 37vh;
   width: 100%;
   text-align: center;
   padding: 0;
